--- a/bootstrap-workshop/index.html
+++ b/bootstrap-workshop/index.html
@@ -1,43 +1,86 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Bootstrap Workshop</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <a href="https://timeconverter.ca"></a>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <a href="https://timeconverter.ca"></a>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
 
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Bootstrap Workshop</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-</head>
+  <body class="container-fluid">
+    <div class="card" style="width: 18rem" id="container1">
+      <img src="./image-product-mobile.jpg" class="card-img-top" alt="..." />
+      <div class="card-body">
+        <p class="card-text">PERFUME</p>
+        <h5 class="card-title">Gabrielle Essence Eau De Parfum</h5>
+        <p class="card-text">
+          A floral, solar and voluptuous interpretation composed by Oliver
+          Polge, Perfumer-Creator for the House of Channel
+        </p>
+        <div class="discount gap-3 d-flex flex-row mb-3">
+          <div>
+            <h3>$149.99</h3>
+          </div>
+          <div class="before">
+            <p><del>$169.99</del></p>
+          </div>
+        </div>
+        <button type="button" class="btn btn-success">🛒 Add to Cart</button>
+      </div>
+    </div>
 
-<body>
-  Your Result
-  76
-  of 100
+    <div class="card mb-3" style="max-width: 540px" id="container2">
+      <div class="row g-0">
+        <div class="col-md-6">
+          <img
+            src="./image-product-desktop.jpg"
+            class="img-fluid rounded-start"
+            alt="..."
+          />
+        </div>
+        <div class="col-md-5">
+          <div class="card-body">
+            <p class="card-text">PERFUME</p>
+            <h5 class="card-title">Gabrielle Essence Eau De Parfum</h5>
+            <p class="card-text">
+              A floral, solar and voluptuous interpretation composed by Oliver
+              Polge, Perfumer-Creator for the House of Channel
+            </p>
 
-  Great
-  You scored higher than 65% of the people who have taken these tests.
-
-  Summary
-
-  Reaction
-  80 / 100
-
-  Memory
-  92 / 100
-
-  Verbal
-  61 / 100
-
-  Visual
-  72 / 100
-
-  Continue
-
-
-  <!-- No elimine este tag -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-    crossorigin="anonymous"></script>
-</body>
-
+            <div class="discount gap-3 d-flex flex-row mb-3">
+              <div>
+                <h3 id="price2">$149.99</h3>
+              </div>
+              <div class="before">
+                <p><del>$169.99</del></p>
+              </div>
+            </div>
+            <button type="button" class="btn btn-success">
+              🛒 Add to Cart
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
