--- a/tailwindcss-workshop/index.html
+++ b/tailwindcss-workshop/index.html
@@ -4,30 +4,86 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <a href="https://timeconverter.ca"></a>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles.css" />
   </head>
-  <body> 
-    Your Result
-    76
-    of 100
-  
-    Great
-    You scored higher than 65% of the people who have taken these tests.
-  
-    Summary
-  
-    Reaction
-    80 / 100
-  
-    Memory
-    92 / 100
-  
-    Verbal
-    61 / 100
-  
-    Visual
-    72 / 100
-  
-    Continue
+  <body>
+    <div class="relative z-10" role="dialog" aria-modal="true">
+      <div
+        class="fixed inset-0 hidden bg-gray-500 bg-opacity-75 transition-opacity md:block"
+        aria-hidden="true"
+      ></div>
 
+      <div class="fixed inset-0 z-10 w-screen overflow-y-auto">
+        <div
+          class="flexcont min-h-full items-stretch mt-0 justify-center text-center md:items-center md:px-2 lg:px-4"
+        >
+          <div
+            class="maincont flex w-full transform mt-0 text-left text-base transition md:my-8 md:max-w-2xl md:px-4 lg:max-w-4xl"
+          >
+            <div
+              class="container relative flex w-full mt-0 items-center overflow-hidden bg-white px-4 pb-0 pt-0 shadow-2xl sm:px-10 sm:pt-0 md:p-0 lg:p-0"
+            >
+              <div
+                class="gridwidth w-full items-start gap-x-6 gap-y-0 sm:grid-cols-12 lg:gap-x-8"
+              >
+                <div
+                  class="image aspect-h-3 aspect-w-2 overflow-hidden rounded-lg bg-gray-100 sm:col-span-4 lg:col-span-5"
+                >
+                  <img
+                    src="./image-product-desktop.jpg"
+                    alt="Two each of gray, white, and black shirts arranged on table."
+                    class="img_desktop object-cover object-center"
+                  />
+                  <img
+                    src="./image-product-mobile.jpg"
+                    alt="Two each of gray, white, and black shirts arranged on table."
+                    class="img_mobile object-cover object-center"
+                  />
+                </div>
+                <div class="info sm:col-span-8 lg:col-span-7">
+                  <p>PERFUME</p>
+                  <h2
+                    id="title"
+                    class="text-2xl font-bold text-gray-900 sm:pr-12"
+                  >
+                    Gabrielle Essence Eau De Parfum
+                  </h2>
+
+                  <section aria-labelledby="information-heading" class="mt-2">
+                    <h3>
+                      A floral, solar and voluptuous interpretation composed by
+                      Oliver Polge, Perfumer-Creator for the House of Channel
+                    </h3>
+                    <div id="price">
+                      <p class="text-2xl text-gray-900">$149.99</p>
+                      <p class="discount">$169.99</p>
+                    </div>
+                    <button
+                      type="submit"
+                      class="mt-6 flex w-full items-center justify-center rounded-md border border-transparent bg-green-700 px-8 py-3 text-base font-medium text-white hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-offset-2"
+                    >
+                      🛒 Add to cart
+                    </button>
+                  </section>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
